fix(board): correct container gap
chore(board): simplify style organization

--- a/packages/board/src/style/global.scss
+++ b/packages/board/src/style/global.scss
@@ -1,16 +1,39 @@
 @import "./variables";
-@import "./_bootstrap";
-
-@import "./_style";
+@import "./bootstrap";
 
 @import "@bpmn-io/draggle/dist/dragula";
 
-/* Fix drag container scrolling */
+html,
+body {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+// fix drag container scrolling
 .gu-mirror {
   pointer-events: none;
 }
 
+// theme customizations
+
 .navbar-brand {
   padding: 0;
   margin: 0;
+}
+
+html {
+  font-size: .9rem;
+}
+
+.avatar img {
+  vertical-align: unset;
+}
+
+.scroll-container-h,
+.scroll-container-v {
+  --container-gap: 0.5rem;
+
+  scrollbar-width: thin;
+  scrollbar-color: rgba(0, 0, 0, .25) transparent;
 }
